--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.27.0",
     "@uiw/react-codemirror": "^4.22.1",
+    "axios": "^1.7.2",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
     "next": "14.2.3",
