--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.27.0",
+    "@uiw/codemirror-themes-all": "^4.22.2",
     "@uiw/react-codemirror": "^4.22.1",
     "axios": "^1.7.2",
     "js-yaml": "^4.1.0",
