--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "json5": "^2.2.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
