addinig comments on code and adding SideBar for the dashboard and fiwing the UI of Yaml editor

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.27.0",
+    "@nextui-org/navbar": "^2.0.33",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
     "@uiw/codemirror-themes-all": "^4.22.2",
     "@uiw/react-codemirror": "^4.22.1",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.12",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
     "next": "14.2.3",
