--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.27.0",
+    "@lezer/highlight": "^1.2.0",
     "@nextui-org/navbar": "^2.0.33",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
