auto generate field  ConfigMap Deplyoment by default

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.27.0",
     "@lezer/highlight": "^1.2.0",
+    "@nextui-org/dropdown": "^2.1.26",
     "@nextui-org/navbar": "^2.0.33",
+    "@nextui-org/popover": "^2.1.24",
+    "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
     "@uiw/codemirror-themes-all": "^4.22.2",
