--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@mui/material": "^5.15.21",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@nextui-org/dropdown": "^2.1.26",
+    "@nextui-org/modal": "^2.0.36",
     "@nextui-org/navbar": "^2.0.33",
     "@nextui-org/popover": "^2.1.24",
     "@nextui-org/react": "^2.4.2",
+    "@nextui-org/select": "^2.2.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
     "@uiw/codemirror-themes-all": "^4.22.2",
