fixing packages issue

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "^0.20.0",
-    "@codemirror/commands": "^6.6.0",
+    "@codemirror/highlight": "^0.19.8",
     "@codemirror/lang-yaml": "^6.1.1",
+    "@codemirror/language": "^6.10.2",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.27.0",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.28.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@lezer/highlight": "^1.2.0",
@@ -28,8 +29,7 @@
     "@nextui-org/select": "^2.2.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
-    "@uiw/codemirror-themes-all": "^4.22.2",
-    "@uiw/react-codemirror": "^4.22.1",
+    "@uiw/react-codemirror": "^4.23.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
     "js-yaml": "^4.1.0",
