Updating the ui and try to change the theme of editor

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codemirror/highlight": "^0.19.8",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/language": "^6.10.2",
     "@codemirror/state": "^6.4.1",
@@ -29,6 +30,12 @@
     "@nextui-org/select": "^2.2.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
+    "@uiw/codemirror-theme-dracula": "^4.23.0",
+    "@uiw/codemirror-theme-material": "^4.23.0",
+    "@uiw/codemirror-theme-nord": "^4.23.0",
+    "@uiw/codemirror-theme-tokyo-night": "^4.23.0",
+    "@uiw/codemirror-theme-xcode": "^4.23.0",
+    "@uiw/codemirror-themes": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
