--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
