--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
     "@uiw/codemirror-theme-dracula": "^4.23.0",
+    "@uiw/codemirror-theme-github": "^4.23.0",
     "@uiw/codemirror-theme-material": "^4.23.0",
     "@uiw/codemirror-theme-nord": "^4.23.0",
     "@uiw/codemirror-theme-tokyo-night": "^4.23.0",
@@ -45,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-split": "^2.0.14",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
